# sofar-me3000sp-homeassistant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements_dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml  validate.yml
blueprints/automation/: sofar_alarm_standby.yaml  sofar_baseline_auto.yaml  sofar_charge_on_export.yaml  sofar_discharge_on_import.yaml  sofar_force_charge_low_soc.yaml  sofar_return_auto_balanced.yaml
custom_components/sofar_me3000sp/: __init__.py  binary_sensor.py  config_flow.py  const.py  entity.py  info.md  manifest.json  number.py  quarter.py  select.py  sensor.py  services.yaml  strings.json
custom_components/sofar_me3000sp/translations/: en.json  nl.json
docs/: AANPASSEN.md  ARCHITECTUUR.md  INSTALLATIE.md  TROUBLESHOOTING.md  index.html
esphome/: secrets.yaml.example  sofar-me3000sp-esp32.yaml
home-assistant/dashboards/: sofar_me3000sp_control_center.yaml  sofar_me3000sp_live_decision.yaml  sofar_me3000sp_mushroom_basic.yaml  sofar_me3000sp_wall_panel.yaml
sofar-me3000sp-homeassistant/: CHANGELOG.md  hacs.json
sofar-me3000sp-homeassistant/blueprints/automation/: sofar_alarm_standby.yaml  sofar_charge_on_export.yaml  sofar_discharge_on_import.yaml
sofar-me3000sp-homeassistant/custom_components/sofar_me3000sp/: __init__.py  manifest.json  number.py
tests/: test_quarter_tracker.py
(+1 files in other folders)
